sre/kubernetes/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: parkirpintar-gateway
  namespace: parkir-pintar
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: parkirpintar-ingress
  namespace: parkir-pintar
spec:
  hosts:
    - "*"
  gateways:
    - parkirpintar-gateway
  http:
    - match:
        - uri:
            prefix: /monitor
      route:
        - destination:
            host: grafana.monitoring.svc.cluster.local
            port:
              number: 3000
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kong-gateway
            port:
              number: 80
